# bitvm-groth16-verifier

./: Cargo.toml  README.md
examples/: groth16-verifier.rs
src/: main.rs  verifier.rs
