[package]
name = "bitvm-groth16-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4.4"
num-traits = "0.2.18"
once_cell = "1.19.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
itertools = "0.10.5"


ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false, features = [ "derive" ] }
ark-poly = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["snark", "sponge"] }

ark-bn254 = { version = "0.4.0", features = ["curve"] }
ark-groth16 = "*"

bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm" }
bitvm = { git = "https://github.com/BitVM/bitvm" }


[patch.crates-io]
base58check = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin_hashes = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin-internals = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin-io = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin-units = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}

ark-ff = { git = "https://github.com/zulu-network/arkworks-algebra.git",  branch = "bitvm"}
ark-ec = { git = "https://github.com/zulu-network/arkworks-algebra.git",  branch = "bitvm"}
ark-serialize = { git = "https://github.com/zulu-network/arkworks-algebra.git",  branch = "bitvm"}
ark-poly = { git = "https://github.com/zulu-network/arkworks-algebra.git",  branch = "bitvm"}

[dev-dependencies]
prove-on-pairing = {git ="https://github.com/zulu-network/prove-on-pairing"}


[patch."https://github.com/BitVM/rust-bitcoin-scriptexec"]
bitcoin-scriptexec = { git = "https://github.com/zulu-network/rust-bitcoin-scriptexec", branch = "bitvm-groth16-dev" }

[patch."https://github.com/BitVM/bitvm"]
bitvm = { git = "https://github.com/zulu-network/BitVM", branch = "groth16/script-tmp-01" }

